src/App.scss
/* ... */
/* Sidebar
     ============================================ */
.sidebar {
  @include no-select();
  width: 266px;
  height: calc(100vh);
  padding-top: 74px;
  padding-right: 10px;
  position: fixed;
  overflow-x: hidden;
  overflow-y: hidden;
  border-right: $generic-border;
  background-color: #fafafa;

  @include mq("900px") {
    display: none;
  }

  li {
    &:hover .sidebar__project-delete {
      display: -webkit-box;
      display: -ms-flexbox;
      display: flex;
    }
  }

  &__project {
    cursor: pointer;
    border-radius: 5px;

    div:nth-child(1) {
      padding: 5px 0;
      padding-left: 10px;
      padding-right: 15px;
      width: 100%;
      display: -webkit-box;
      display: -ms-flexbox;
      display: flex;
      -webkit-box-align: center;
      -ms-flex-align: center;
      align-items: center;
    }

    &-delete {
      margin-left: auto;
      display: none;

      svg {
        color: #cacaca;
      }
    }

    &.active,
    &:hover {
      background-color: #ececec;
    }

    &:nth-child(1) {
      .sidebar__dot {
        color: #6accbc;
      }
    }
    &:nth-child(2) {
      .sidebar__dot {
        color: #fad003;
      }
    }
    &:nth-child(3) {
      .sidebar__dot {
        color: #ff8d85;
      }
    }
    &:nth-child(4) {
      .sidebar__dot {
        color: #ff9932;
      }
    }
    &:nth-child(5) {
      .sidebar__dot {
        color: #af38eb;
      }
    }
  }

  &__projects {
    padding-left: 3px;
  }

  &__project {
    @include va("left");
  }

  &__dot {
    margin-right: 10px;
    font-size: 30px;
  }

  &__middle {
    margin-top: 20px;
    margin-bottom: 20px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    border-bottom: $generic-border;
    padding-left: 10px;
    cursor: pointer;

    span {
      color: #0000008a;
      margin-right: 10px;

      svg {
        transition: transform 200ms ease-in-out;
      }

      svg.hidden-projects {
        -webkit-transform: rotate(-90deg);
        transform: rotate(-90deg);
      }
    }

    h2 {
      margin: 0;
      color: #333;
      font-size: 15px;
      font-weight: bold;
      padding-bottom: 20px;
    }
  }

  &__generic {
    li {
      list-style-type: none;
      color: #333;
      display: -webkit-box;
      display: -ms-flexbox;
      display: flex;
      cursor: pointer;
      line-height: 1.5;
      font-size: 15px;
      padding-left: 0;
      padding-right: 0;
      margin: 5px 0;
      border-radius: 5px;

      div:nth-child(1) {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        padding: 10px 0 10px 10px;
        width: 100%;

        span:first-of-type {
          margin-right: 10px;
          display: -webkit-box;
          display: -ms-flexbox;
          display: flex;
          -webkit-box-align: center;
          -ms-flex-align: center;
          align-items: center;

          svg {
            width: 18px;
            height: 18px;
            color: #555;
          }
        }
      }

      &.active,
      &:hover {
        background-color: #ececec;
      }
    }
  }
}

/* Show Confirm Delete
     ============================================ */
.project-delete-modal {
  position: relative;

  &__inner {
    @include box-overlay();
    z-index: 99;
    width: 200px !important;
    padding: 10px;
    top: 25px;
    right: 0;
    background-color: white;
    flex-wrap: wrap;
    align-items: center;

    p {
      margin-top: 5px;
      margin-bottom: 5px;
      width: 100%;
      line-height: normal;
      font-weight: normal;
      font-size: 15px;
    }

    button {
      @include btn(70px);
      margin: 0;
    }
    span {
      @include cancel();
      font-weight: normal;
    }
  }
}

/* General Reusable
     ============================================ */

.handle {
  display: block;
  cursor: move;
  opacity: 0;
  margin-right: 6px;
  padding: 1px;
  border-radius: 3px;

  &:hover {
    opacity: 1;
    background-color: #ececec;
  }
}

.visible {
  opacity: 1;
}

/* Main Content
     ============================================ */
.content {
  display: grid;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr auto;
  max-width: 922px;
  margin: auto;
}
/* ... */

